...
    deviceInformation: "Device info",
    microphoneSelection: "Microphone Selection",
    glassesNeededForGlassesMic: "Connect glasses to enable",
    systemMic: "Automatic",
    glassesMic: "Glasses only",
    batteryStatus: "Battery Status",
    glasses: "Glasses",
    case: "Case",
    caseCharging: "Case (Charging)",
    emptyState: "Glasses settings will appear here.\nPair glasses to adjust settings.",
    notConnectedInfo: "Changes to glasses settings will take effect when glasses are connected.",
    advancedSettings: "Advanced Settings",
    recommended: "Recommended",
...
  },
  simulatedGlasses: {
    showDashboard: "Show Dashboard",
    hideDashboard: "Hide Dashboard",
  },
  connection: {
    connected: "Connected",
    connecting: "Connecting",
    reconnecting: "Reconnecting",
    disconnected: "Disconnected",
  },
  pairing: {
    selectModel: "Select Model",
    pairingGuide: "Pairing Guide",
    pairing: "Pairing",
    needMoreHelp: "I need more help",
    simulatedGlassesDescription: "Simulated Glasses allows you to run MentraOS without physical smart glasses.",
    permissionRequired: "Permission Required",
    bluetoothPermissionRequiredTitle: "Permission Required",
    bluetoothPermissionRequiredMessage: "Bluetooth permissions are required to connect to glasses",
...
    tryLiveCaptionsMessage: "Start talking now to see your speech transcribed on your glasses in real-time!",
    permissionRequiredTitle: "Permission Required",
    permissionsRequiredTitle: "Permissions Required",
    permissionMessage: "Please grant the following permissions to continue: {{permissions}}",
    activateAnApp: "Activate an App",
    activateAnAppMessage: "Switch the toggle to run an app on your glasses.",
    search: "Search",
    noAppsFoundForQuery: 'No apps found for "{{query}}"',
    clearSearch: "Clear Search",
    movedToActive: "Moved to Active",
    movedToInactive: "Moved to Inactive",
    foreground: "Foreground",
    thereCanOnlyBeOne: "There Can Only Be One",
...
    videosOnDevice: "Videos on Device",
    photosOnGlasses: "Photos on Glasses",
    videosOnGlasses: "Videos on Glasses",
    storageUsed: "Storage Used",
  },
  store: {
    title: "Store",
  },
  settings: {
    title: "Account",
    phoneHeadset: "Phone / Headset",
    glasses: "Glasses",
    bypassVAD: "Bypass VAD for Debugging",
...
    or: "OR",
    logOut: "Log Out",
    error: "Error",
    notAvailable: "Not Available",
    yes: "Yes",
    delete: "Delete",
    continue: "Continue",
    next: "Next",
    request: "Request",
    start: "Start",
    stop: "Stop",
    settings: "Settings",
    openWebView: "Open Web View",
...
      heading: "So empty... so sad",
      content: "No data found yet. Try clicking the button to refresh or reload the app.",
      button: "Let's try this again",
    },
  },
  navigation: {
    home: "Home",
    glasses: "Glasses",
    mirror: "Mirror",
    store: "Store",
    account: "Account",
  },
  feedback: {
...
