...
                    <strong>Name:</strong>{" "}
                    {configData.name
                      ? configData.name
                      : "Not provided (will keep current)"}
                  </div>
                  <div>
                    <strong>Description:</strong>{" "}
                    {configData.description
                      ? configData.description
                      : "Not provided (will keep current)"}
                  </div>
                </div>
              </div>
...
