...
      replace("/(tabs)/home")
    }

    const modelName = status.glasses_info?.model_name

    // If pairing successful, return to home
    if (status.core_info.puck_connected && modelName && !modelName.startsWith("Simulated")) {
      router.dismissAll()
      replace("/(tabs)/home")
    }
  }, [status])

  const triggerGlassesPairingGuide = async (glassesModelName: string, deviceName: string) => {
...
